data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_179.wast
;; 10. **Mixed Branching and Function Calls**:     - Description: Integrate function calls within a loop that includes multiple branches. The functions should contain their branching logic. Verify that branches outside and inside functions resolve correctly to their intended loop targets.     - Reasoning: Tests interaction between function calls and loop branching to ensure correct control flow across functions and loops.

(assert_invalid
  (module
    (type $t (func))
    (func $f (result i32)
      (br 0)
      (i32.const 42)
    )
    (func (result i32)
      (loop (result i32)
        (call $f)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)